--- a/Tailwind_project.html
+++ b/Tailwind_project.html
@@ -37,7 +37,8 @@
         <nav
           class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-700 flex flex-wrap items-center text-base justify-center"
         >
-          <a class="mr-5 hover:text-white">First Link</a>
+          <a class="mr-5 hover:text-white" href="/tailwind-project/Tailwind_project.html
+">First Link</a>
           <a class="mr-5 hover:text-white">Second Link</a>
           <a class="mr-5 hover:text-white">Third Link</a>
           <a class="mr-5 hover:text-white">Fourth Link</a>
